# ConvertAsset

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py
.claude/: file-ownership.md
.claude/agents/: architecture-planner.md  asset-validator.md  bug-fixer.md  code-refactorer.md  codebase-explorer.md  docs-writer.md  feature-designer.md  feature-implementer.md  isaac-sim-full-tester.md  isaac-sim-headless-tester.md  paper-experiment-runner.md  paper-figure-generator.md  paper-research-advisor.md  paper-writer.md  version-commit-agent.md
.codex/: file-ownership.md
.codex/agents/: README.md  architecture-planner.md  asset-validator.md  bug-fixer.md  code-refactorer.md  codebase-explorer.md  docs-writer.md  feature-designer.md  feature-implementer.md  isaac-sim-full-tester.md  isaac-sim-headless-tester.md  paper-experiment-runner.md  paper-figure-generator.md  paper-research-advisor.md  paper-writer.md  version-commit-agent.md
.github/workflows/: deploy-learning-site.yml
archive/: README.md
convert_asset/: __init__.py  cli.py  export_mdl_materials.py  inspect_material.py  thumbnail.py
convert_asset/asset_application_normalizer/: __init__.py  benchmark_contract.py  cli.py  evidence_manifest.py  grasp_cross_section.py  interaction_authoring.py  interaction_runtime_qualification.py  material_closure.py  mdl_runtime_closure.py  mjcf_scout.py  model.py  negative_gate.py  object_interaction_profile.py  package_layout.py  physics_authoring.py  physics_checks.py  physics_profile.py  pipeline.py  pm_evidence_table.py  role_normalization.py  runtime_smoke.py  stage_metrics.py  usd_closure.py
convert_asset/camera/: bounds.py  fit.py  orbit.py  poses.py
convert_asset/capture/: __init__.py  manifest.py  pipeline.py  targets.py
convert_asset/datasets/: __init__.py  grscenes.py
convert_asset/glb/: converter.py  texture_utils.py  usd_material.py  usd_mesh.py  usd_scene.py  writer.py
convert_asset/mesh/: __init__.py  backend_cpp.py  backend_cpp_impl.py  faces.py  simplify.py
convert_asset/no_mdl/: __init__.py  config.py  convert.py  diagnostics.py  materials.py  mdl_parse.py  path_utils.py  processor.py  references.py
convert_asset/render/: __init__.py  single.py  viewport.py
docs/: README.md  agent-team-playbook.md  callstack.md  codex-agent-playbook.md  design.md  export_mdl_materials_code_walkthrough.md  export_mdl_materials_usage.md  index.md  inspect_material.md  materials.md  no_mdl_dev_changes.md  processor.md  setup.md
docs/architecture/: README.md  callstack.md  flow.md  modules.md  orbit_camera_capture.md  orbit_camera_capture_zh.md  orbit_cli_camera_pose.md
docs/changes/: 2026-01-06_glb_refactor.md  2026-03-06_methodology_pipeline_figure.md  2026-03-06_paper_figure_asset_placement.md  2026-03-09_agent_team_diagnosis.md  (+8 more)
examples/: inspect_demo.glb  inspect_demo.usda  mesh_with_mat.glb  mesh_with_mat.usda  simple_mesh.glb  simple_mesh.usda
learn/: README.md  _template.html  content.js  index.html
native/meshqem/: CMakeLists.txt  README.md
native/meshqem/src/: io_obj.cpp  io_obj.hpp  main.cpp  mesh.cpp  mesh.hpp  python_bindings.cpp  qem.cpp  qem.hpp
paper/: .gitignore  EXPERIMENT_CHECKLIST.md  Makefile  README.md
reports/: README.md
scripts/: batch_count_faces.py  batch_nomdl.sh  camera_take_photo.py  create_carema_at_prim.py  create_carema_at_prim_v2.py  create_carema_at_prim_v4.py  fix_mdl_absolute_imports.py  inspect_uv_interp.py  isaac_python.sh  plot_faces_report.py  plot_faces_report_mpl.py  render_with_kit.py  render_with_viewport_capture.py  repair_grscenes_pointer_entries.py  rotate_and_take_pics.py  rotate_and_take_pics_mdl.py  rotate_and_take_pics_v3.py  usd_make_preview_copies.py  uv_audit.py
tests/: test_acl_author_gate.py  test_acl_author_gate_init.py  test_acl_author_gate_prefill.py  test_acl_citation_inventory.py  test_acl_claim_boundaries.py  test_acl_evidence_numbers.py  test_acl_final_blockers.py  test_acl_goal_completion_report.py  test_acl_integrity_fingerprint.py  test_acl_metadata_consistency.py  test_acl_openreview_checklist.py  test_acl_openreview_upload_runbook.py  test_acl_preupload_gate.py  test_acl_submission_staging.py  test_acl_target_policy.py  test_asset_application_normalizer_cli.py  test_asset_application_normalizer_dynamic_physics_profile.py  test_asset_application_normalizer_grasp_cross_section.py  test_asset_application_normalizer_interaction_runtime_qualification.py  test_asset_application_normalizer_labutopia_vessel_profiles.py  test_asset_application_normalizer_mdl_runtime_closure.py  test_asset_application_normalizer_object_interaction_profile.py  test_asset_application_normalizer_physics_admission.py  test_asset_application_normalizer_pm_and_mjcf.py  test_fix_mdl_absolute_imports.py  test_grscenes_vlm_author_camera_stages.py  test_grscenes_vlm_canonical_manifest.py  test_grscenes_vlm_full_dependency_closure.py  test_grscenes_vlm_full_nomdl_apply_verifier.py  test_grscenes_vlm_full_nomdl_runner.py  test_grscenes_vlm_full_nomdl_scratch_plan.py  test_grscenes_vlm_full_scratch_materializer.py  test_grscenes_vlm_manifest.py  test_grscenes_vlm_material_dependency_closure.py  test_grscenes_vlm_materialize_scratch.py  test_grscenes_vlm_paired_render_smoke.py  test_grscenes_vlm_prediction_runner.py  test_grscenes_vlm_projection_center_baseline.py  test_grscenes_vlm_projection_subset.py  test_grscenes_vlm_recommended_render_summary.py  (+40 more)
(+2354 files in other folders)
